Update correct answer color to cadetblue to increase visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ body {
 
 /* for when button for correct answer is chosen */
 .btn.correct {
-    background-color: hsl(163, 90%, 23%);
+    background-color: cadetblue;
 }
 
 /* for when the button for wrong answer is chosen */
